Refactor service worker and app version handling: Updated service worker to dynamically fetch app version from version.json, improving cache management. Added version display in settings page and centralized version retrieval in configs.js for consistency across the application.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -38,7 +38,7 @@
 </div>
 
 <!-- Sección: Conceptos de Gastos -->
-<div class="mb-4">
+<div class="mb-4 pt-3 border-top">
   <div class="d-flex align-items-center gap-2">
     <i class="bi bi-cash-coin text-primary fs-5"></i>
     <h6 class="mb-0 fw-semibold">Conceptos de Gastos</h6>
@@ -77,7 +77,7 @@
 </div>
 
 <!-- Sección: Porcentaje de Salario -->
-<div class="mb-4">
+<div class="mb-4 pt-3 border-top">
   <div class="d-flex align-items-center gap-2">
     <i class="bi bi-percent text-primary fs-5"></i>
     <h6 class="mb-0 fw-semibold">Porcentaje de Salario</h6>
@@ -114,5 +114,23 @@
     >
       <i class="bi bi-floppy fs-5"></i>
     </button>
+  </div>
+</div>
+
+<!-- Sección: Información de la app -->
+<div class="mb-4 pt-3 border-top">
+  <div class="d-flex align-items-center gap-2">
+    <i class="bi bi-info-circle text-primary fs-5"></i>
+    <h6 class="mb-0 fw-semibold">Información</h6>
+  </div>
+  <div class="text-muted small mt-2">
+    <div class="mb-1">
+      <span>Versión</span>
+      <span id="appVersionText" class="ms-1 fw-medium text-dark">--</span>
+    </div>
+    <div>
+      <span>Autor</span>
+      <span class="ms-1 fw-medium text-dark">Jeiser Medrano Abreu</span>
+    </div>
   </div>
 </div>
