Update app version to 1.0.3 and improve service worker registration: Changed version in version.json and service-worker.js to ensure proper cache management. Enhanced service worker registration in auth.js to include versioning for better update detection. Added user guidance in settings.html for refreshing the app to see the latest version.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -128,9 +128,12 @@
       <span>Versión</span>
       <span id="appVersionText" class="ms-1 fw-medium text-dark">--</span>
     </div>
-    <div>
+    <div class="mb-2">
       <span>Autor</span>
       <span class="ms-1 fw-medium text-dark">Jeiser Medrano Abreu</span>
     </div>
+    <p class="small mb-0 mt-2 text-muted" style="font-size: 0.75rem;">
+      <i class="bi bi-arrow-repeat"></i> Para ver la última versión, cierra la app por completo y ábrela de nuevo.
+    </p>
   </div>
 </div>
