--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
   </div>
 
-  <!-- JS (solo referencias) -->
+  <!-- JS (configs para APP_VERSION; auth para login y registro del Service Worker) -->
+  <script src="js/configs.js"></script>
   <script src="js/auth.js"></script>
 
 </body>
