--- a/layout.html
+++ b/layout.html
@@ -286,6 +286,7 @@
     <script src="js/configs.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
+    <script src="js/exports.js"></script>
     <script src="js/modal-helpers.js"></script>
     <script src="js/form-helpers.js"></script>
     <script src="js/router.js"></script>
