--- a/pages/settings.html
+++ b/pages/settings.html
@@ -14,19 +14,12 @@
   <!-- Campo de texto + botón agregar -->
   <div class="d-flex gap-2 mb-3">
     <div class="flex-grow-1 d-inline-flex">
-      <input
-        type="text"
-        class="form-control form-control-sm rounded-pill"
-        id="inputNewUnit"
-        placeholder="Nueva unidad de medida..."
-      />
+      <input type="text" class="form-control form-control-sm rounded-pill" id="inputNewUnit"
+        placeholder="Nueva unidad de medida..." />
       <div class="invalid-feedback" id="unitErrorFeedback"></div>
     </div>
-    <button
-      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-      id="btnAddUnit"
-      style="width: 40px; height: 40px; flex-shrink: 0"
-    >
+    <button class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center" id="btnAddUnit"
+      style="width: 40px; height: 40px; flex-shrink: 0">
       <i class="bi bi-plus fs-5"></i>
     </button>
   </div>
@@ -46,26 +39,19 @@
 
   <!-- Texto informativo -->
   <div class="text-muted fs-small btn-chip mb-3">
-    <i class="bi bi-info-circle"></i> 
+    <i class="bi bi-info-circle"></i>
     Conceptos utilizados para categorizar los gastos registrados
   </div>
 
   <!-- Campo de texto + botón agregar -->
   <div class="d-flex gap-2 mb-3">
     <div class="flex-grow-1 d-inline-flex">
-      <input
-        type="text"
-        class="form-control form-control-sm rounded-pill"
-        id="inputNewConcept"
-        placeholder="Nuevo concepto de gastos..."
-      />
+      <input type="text" class="form-control form-control-sm rounded-pill" id="inputNewConcept"
+        placeholder="Nuevo concepto de gastos..." />
       <div class="invalid-feedback" id="conceptErrorFeedback"></div>
     </div>
-    <button
-      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-      id="btnAddConcept"
-      style="width: 40px; height: 40px; flex-shrink: 0"
-    >
+    <button class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center" id="btnAddConcept"
+      style="width: 40px; height: 40px; flex-shrink: 0">
       <i class="bi bi-plus fs-5"></i>
     </button>
   </div>
@@ -85,33 +71,23 @@
 
   <!-- Texto informativo -->
   <div class="text-muted fs-small btn-chip mb-3">
-    <i class="bi bi-info-circle"></i> 
+    <i class="bi bi-info-circle"></i>
     Porcentaje utilizado para calcular el salario del vendedor
   </div>
 
   <div class="d-flex gap-2">
     <div class="flex-grow-1 d-inline-flex flex-column">
       <div class="input-group input-group rounded-pill overflow-hidden border">
-        <input
-          type="number"
-          class="form-control form-control px-3"
-          id="inputSalaryPercentage"
-          placeholder="1.7"
-          min="0"
-          max="100"
-          step="0.1"
-        />
+        <input type="number" class="form-control form-control px-3" id="inputSalaryPercentage" placeholder="1.7" min="0"
+          max="100" step="0.1" />
         <span class="input-group-text bg-primary text-white border-0 px-3">
           <i class="bi bi-percent"></i>
         </span>
       </div>
       <div class="invalid-feedback" id="salaryPercentageErrorFeedback"></div>
     </div>
-    <button
-      class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
-      id="btnSaveSalaryPercentage"
-      style="width: 40px; height: 40px; flex-shrink: 0"
-    >
+    <button class="btn btn-primary rounded-circle d-flex align-items-center justify-content-center"
+      id="btnSaveSalaryPercentage" style="width: 40px; height: 40px; flex-shrink: 0">
       <i class="bi bi-floppy fs-5"></i>
     </button>
   </div>
@@ -124,16 +100,37 @@
     <h6 class="mb-0 fw-semibold">Información</h6>
   </div>
   <div class="text-muted small mt-2">
-    <div class="mb-1">
-      <span>Versión</span>
-      <span id="appVersionText" class="ms-1 fw-medium text-dark">--</span>
+    <div class="mb-2 d-flex align-items-center">
+      <span class="flex-grow-1">Autor</span>
+      <span class="fw-medium text-dark rounded-pill border px-2">Jeiser Medrano Abreu</span>
     </div>
-    <div class="mb-2">
-      <span>Autor</span>
-      <span class="ms-1 fw-medium text-dark">Jeiser Medrano Abreu</span>
+    <div class="mb-2 d-flex align-items-center">
+      <span class="flex-grow-1">Última actualización</span>
+      <span id="appLastUpdateDateText" class="fw-medium text-dark rounded-pill border px-2">--</span>
     </div>
-    <p class="small mb-0 mt-2 text-muted" style="font-size: 0.75rem;">
-      <i class="bi bi-arrow-repeat"></i> Para ver la última versión, cierra la app por completo y ábrela de nuevo.
-    </p>
+    <div class="mb-1 d-flex align-items-center">
+      <span class="flex-grow-1">Versión</span>
+      <span id="appVersionText" class="fw-medium text-dark rounded-pill border px-2">--</span>
+    </div>
+    <!-- Texto informativo -->
+    <div class="text-muted fs-small btn-chip mb-3">
+      <i class="bi bi-arrow-repeat"></i>
+      Para ver la última versión, cierra la app por completo y ábrela de nuevo.
+    </div>
+  </div>
+
+  <div class="mb-4 pt-3 border-top">
+    <button class="btn btn-outline-primary rounded-pill d-flex align-items-center w-100 px-1 py-1"
+      id="btnExportAppState" type="button">
+      <span class="flex-grow-1">
+        Guardar estado de la app
+      </span>
+      <span class="px-3 text-primary rounded-pill bg-primary text-white">
+        <i class="bi bi-filetype-json fs-5"></i>
+      </span>
+      <!-- <span class="px-3 py-1 text-primary border-start border-primary">
+        <i class="bi bi-download fs-5"></i>
+      </span> -->
+    </button>
   </div>
 </div>
