Add badge component integration: Include badge.js and badge.html in service worker precaching, load badge component in settings page, and update layout to reference badge script. Enhance unit and concept chip creation to utilize badge component for improved UI consistency.

--- a/layout.html
+++ b/layout.html
@@ -311,6 +311,7 @@
     <script src="components/confirm-action/confirm-action.js"></script>
     <script src="components/toast/toast.js"></script>
     <script src="components/empty-state/empty-state.js"></script>
+    <script src="components/badge/badge.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
