Add import functionality in settings: Introduced import state feature with UI elements in settings page, updated settings.js to handle file input and import logic, and included imports.js in service worker for enhanced app state management.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -127,9 +127,19 @@
       </span>
       <span class="flex-grow-1">
         Exportar estado de la app
-        <i class="bi bi-download fs-5 px-2"></i>
+        <i class="bi bi-cloud-download fs-5 px-2"></i>
       </span>
     </button>
-    
+    <input type="file" id="inputImportAppState" accept=".json" class="d-none" />
+    <button class="btn btn-outline-primary rounded-pill d-flex align-items-center w-100 px-1 py-1 mt-3"
+      id="btnImportAppState" type="button">
+      <span class="px-3 text-primary rounded-pill bg-primary text-white">
+        <i class="bi bi-filetype-json fs-5"></i>
+      </span>
+      <span class="flex-grow-1">
+        Importar estado de la app
+        <i class="bi bi-cloud-upload fs-5 px-2"></i>
+      </span>
+    </button>
   </div>
 </div>
