--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <body class="bg-light d-flex align-items-center" style="min-height: 100vh;">
 
   <div class="container">
+    <div class="text-center mb-4">
+      <img src="img/app-icon.png" alt="App Contable" class="img-fluid mb-3" style="max-width: 100px;" />
+      
+    </div>
     <div class="row justify-content-center">
       <div class="col-12 col-sm-8 col-md-5">
 
