--- a/layout.html
+++ b/layout.html
@@ -287,6 +287,7 @@
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/exports.js"></script>
+    <script src="js/imports.js"></script>
     <script src="js/modal-helpers.js"></script>
     <script src="js/form-helpers.js"></script>
     <script src="js/router.js"></script>
