Add WhatsApp button and stock message functionality: Implemented a button for sending stock reports via WhatsApp, added functions to generate stock messages for critical and low stock products, and updated the home page layout to include the new button.

--- a/pages/home.html
+++ b/pages/home.html
@@ -88,6 +88,19 @@
         </div>
       </div>
     </div>
+
+    <div class="mb-4 border-top">
+      <button class="btn btn-outline-success rounded-pill d-flex align-items-center w-100 px-1 py-1 mt-3"
+        id="btnSendWhatsApp" type="button">
+        <span class="px-3 text-success rounded-pill bg-success text-white">
+          <i class="bi bi-whatsapp fs-5"></i>
+        </span>
+        <span class="flex-grow-1">
+          Enviar por WhatsApp
+          <i class="bi bi-send fs-5 px-2"></i>
+        </span>
+      </button>
+    </div>
   </div>
 
   <!-- Sección: Resumen de la contabilidad del día -->
