Add scanner component integration: Include HTML and JS for barcode/QR code scanning functionality, add scan button in products module, and update service worker for precaching new components.

--- a/layout.html
+++ b/layout.html
@@ -283,6 +283,7 @@
     <!-- ===== SCRIPTS ===== -->
     <!-- Core/Shared JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="components/scanner/html5-qrcode.min.js"></script>
     <script src="js/configs.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
@@ -313,6 +314,7 @@
     <script src="components/toast/toast.js"></script>
     <script src="components/empty-state/empty-state.js"></script>
     <script src="components/badge/badge.js"></script>
+    <script src="components/scanner/scanner.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
