--- a/modules/products/modals/products-modal.html
+++ b/modules/products/modals/products-modal.html
@@ -19,6 +19,11 @@
           <input type="hidden" id="productId" />
 
           <div class="mb-2">
+            <label for="inputCode" class="form-label">Código</label>
+            <input type="text" class="form-control form-control-sm" id="inputCode" placeholder="Código de barras o QR (opcional)" />
+          </div>
+
+          <div class="mb-2">
             <label for="inputName" class="form-label">Nombre</label>
             <input type="text" class="form-control form-control-sm" id="inputName" required />
             <div class="invalid-feedback">
