Add btn-scan-product component integration: Include button functionality for scanning products, update layout to reference new component, and enhance service worker for precaching related files.

--- a/layout.html
+++ b/layout.html
@@ -294,6 +294,7 @@
     <script src="js/router.js"></script>
     <script src="components/search-input/search-input.js"></script>
     <script src="components/btn-add/btn-add.js"></script>
+    <script src="components/btn-scan-product/btn-scan-product.js"></script>
     <script src="components/order-by/order-by.js"></script>
     <script src="components/date-filter/date-filter.js"></script>
     <script src="components/chips-filter/chips-filter.js"></script>
