--- a/modules/products/modals/products-modal.html
+++ b/modules/products/modals/products-modal.html
@@ -1,17 +1,13 @@
 <div class="modal fade" id="products-modal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      
+
       <div class="modal-header">
         <i id="productIcon" class="bi bi-box text-primary px-2"></i>
         <h5 class="modal-title" id="productModalTitle">
           Producto
         </h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
 
       <div class="modal-body">
@@ -19,8 +15,17 @@
           <input type="hidden" id="productId" />
 
           <div class="mb-2">
-            <label for="inputCode" class="form-label">Código</label>
-            <input type="text" class="form-control form-control-sm" id="inputCode" placeholder="Código de barras o QR (opcional)" />
+            <div class="d-flex align-items-center">
+              <label class="form-label flex-grow-1">Códigos</label>
+              <button type="button"
+                class="btn btn-outline-primary btn-sm rounded-circle d-flex align-items-center justify-content-center"
+                id="btnAddCodeScan" style="width: 36px; height: 36px" title="Escanear y agregar código">
+                <i class="bi bi-upc-scan"></i>
+              </button>
+            </div>
+            <div id="productCodesContainer" class="d-flex flex-wrap align-items-center gap-2 mb-2 w-100">
+              <!-- Badges de códigos se insertan por JS -->
+            </div>
           </div>
 
           <div class="mb-2">
@@ -34,13 +39,7 @@
 
           <div class="mb-2">
             <label for="inputPrice" class="form-label">Precio</label>
-            <input
-              type="number"
-              class="form-control form-control-sm"
-              id="inputPrice"
-              min="0"
-              step="0.01"
-            />
+            <input type="number" class="form-control form-control-sm" id="inputPrice" min="0" step="0.01" />
             <div class="invalid-feedback">
               El precio debe ser mayor a 0
               <!-- el mensaje se establece por JS -->
@@ -70,13 +69,7 @@
 
           <div class="mb-2">
             <label class="form-label">Umbral de stock bajo</label>
-            <input
-              type="number"
-              class="form-control form-control-sm"
-              id="inputLowStockThreshold"
-              min="0"
-              required
-            />
+            <input type="number" class="form-control form-control-sm" id="inputLowStockThreshold" min="0" required />
             <div class="invalid-feedback">
               Este campo es obligatorio
             </div>
@@ -84,13 +77,8 @@
 
           <div class="mb-2">
             <label class="form-label">Umbral de stock crítico</label>
-            <input
-              type="number"
-              class="form-control form-control-sm"
-              id="inputCriticalStockThreshold"
-              min="0"
-              required
-            />
+            <input type="number" class="form-control form-control-sm" id="inputCriticalStockThreshold" min="0"
+              required />
             <div class="invalid-feedback">
               Este campo es obligatorio
             </div>
